Fix generic nullability warnings